# GPU-FFT

./: .clang-format  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  bench_fft.cu  bench_gpu_ffnt_R_R_mult.cu  bench_gpu_fft.cu  bench_gpu_fft_C_C_mult.cu  bench_gpu_fft_R_R_mult.cu  bench_gpu_fft_mult.cu  bench_polymult.cu  bench_util.cuh
cmake/: Config.cmake.in
example/: CMakeLists.txt  test_ffnt_cpu.cu  test_ffnt_gpu_R_R.cu  test_fft.cu  test_fft_cpu.cu  test_fft_gpu.cu  test_fft_gpu_C_C.cu  test_fft_gpu_R_R copy.cu  test_fft_gpu_R_R.cu
src/: CMakeLists.txt  common.cu  common.cuh  complex.cuh  fft.cu  fft.cuh  fft_cpu.cu  fft_cpu.cuh
src/include/: CMakeLists.txt  common_fft.cuh  complex.cuh  fft.cuh  fft_cpu.cuh
src/include/gpufft/: common_fft.cuh  fft_cpu.cuh
src/lib/: CMakeLists.txt  common_fft.cu  fft.cu  fft_cpu.cu
test/: bench_fft.cu  bench_polymult.cu  test_fft.cu
